# ClaudeWearable

./: .gitignore  CIRCUITPY  README.md  bridge.py  rebuild-ios.sh  requirements.txt
.claude/: settings.local.json
adafruit-circuitpython-bundle-10.x-mpy-20260321/: VERSIONS.txt
adafruit-circuitpython-bundle-10.x-mpy-20260321/examples/apds9999/: apds9999_automatic_interrupt_threshold_test.py  apds9999_automatic_rgb_test.py  apds9999_manual_interrupt_test.py  apds9999_simpletest.py
adafruit-circuitpython-bundle-10.x-mpy-20260321/examples/as7331/: as7331_simpletest.py
adafruit-circuitpython-bundle-10.x-mpy-20260321/examples/as7343/: as7343_flicker_detection.py  as7343_fulltest.py  as7343_plotter.py  as7343_simpletest.py
adafruit-circuitpython-bundle-10.x-mpy-20260321/examples/display-text/: display_text_accent_example.py  display_text_accent_scrolling_example.py  display_text_antialias_lvfont_example.py
adafruit-circuitpython-bundle-10.x-mpy-20260321/examples/display_analogclock/: display_analog_clock_bitmap_seconds_hand.py  display_analogclock_vectorio_seconds_hand.py  red_second_hand.bmp.license
adafruit-circuitpython-bundle-10.x-mpy-20260321/examples/sgp41/: sgp41_simpletest.py
adafruit-circuitpython-bundle-10.x-mpy-20260321/examples/ssd1677/: ssd1677_simpletest.py
adafruit-circuitpython-bundle-10.x-mpy-20260321/examples/stcc4/: stcc4_simpletest.py
adafruit-circuitpython-bundle-10.x-mpy-20260321/examples/tcs3430/: tcs3430_colormatrix.py  tcs3430_fulltest.py  tcs3430_interrupt_pin_test.py  tcs3430_interrupt_test.py  tcs3430_simpletest.py
adafruit-circuitpython-bundle-10.x-mpy-20260321/examples/tsc2007/: tsc2007_2.4_featherwing_calibration.py
adafruit-circuitpython-bundle-10.x-mpy-20260321/examples/xteink_x4/: xteink_x4_simpletest.py
adafruit-circuitpython-bundle-10.x-mpy-20260321/examples/yotoplayer/: manual_display_refresh.py  yotoplayer_mp3_player_demo.py  yotoplayer_simpletest.py
adafruit-circuitpython-bundle-10.x-mpy-20260321/lib/: adafruit_anchored_group.mpy  adafruit_apds9999.mpy  adafruit_as7331.mpy  adafruit_as7341.mpy  adafruit_as7343.mpy  adafruit_bmp280.mpy  adafruit_bmp5xx.mpy  adafruit_checkbox.mpy  adafruit_debug_i2c.mpy  adafruit_display_analogclock.mpy  adafruit_ens160.mpy  adafruit_ina219.mpy  adafruit_logging.mpy  adafruit_miniesptool.mpy  adafruit_mlx90393.mpy  adafruit_opt4048.mpy  adafruit_pca9554.mpy  adafruit_rfm69.mpy  adafruit_rfm9x.mpy  adafruit_rockblock.mpy  adafruit_sen6x.mpy  adafruit_sgp41.mpy  adafruit_ssd1677.mpy  adafruit_stcc4.mpy  adafruit_tcs3430.mpy  adafruit_templateengine.mpy  adafruit_tlv320.mpy  adafruit_tmp117.mpy  adafruit_tsc2007.mpy  adafruit_tsl2591.mpy  adafruit_xteink_x4.mpy
adafruit-circuitpython-bundle-10.x-mpy-20260321/lib/adafruit_bluefruit_connect/: __init__.mpy  image_parser.mpy
adafruit-circuitpython-bundle-10.x-mpy-20260321/lib/adafruit_epd/: ek79686.mpy  il0373.mpy  il0398.mpy  il91874.mpy  jd79661.mpy  jd79667.mpy  mcp_sram.mpy  ssd1608.mpy  ssd1675.mpy  ssd1675b.mpy  ssd1680.mpy  ssd1680b.mpy  ssd1681.mpy  ssd1683.mpy  uc8151d.mpy  uc8179.mpy
adafruit-circuitpython-bundle-10.x-mpy-20260321/lib/adafruit_esp32s2tft/: __init__.mpy  graphics.mpy  network.mpy  peripherals.mpy
adafruit-circuitpython-bundle-10.x-mpy-20260321/lib/adafruit_fruitjam/: __init__.mpy  graphics.mpy  network.mpy  peripherals.mpy
adafruit-circuitpython-bundle-10.x-mpy-20260321/lib/adafruit_matrixportal/: graphics.mpy  matrix.mpy  matrixportal.mpy  network.mpy
adafruit-circuitpython-bundle-10.x-mpy-20260321/lib/adafruit_mcp230xx/: digital_inout.mpy  mcp23008.mpy  mcp23016.mpy  mcp23017.mpy  mcp230xx.mpy  mcp23s08.mpy  mcp23s17.mpy  mcp23sxx.mpy  mcp23xxx.mpy
adafruit-circuitpython-bundle-10.x-mpy-20260321/lib/adafruit_mcp3xxx/: analog_in.mpy  mcp3002.mpy  mcp3004.mpy  mcp3008.mpy  mcp3202.mpy  mcp3204.mpy  mcp3208.mpy  mcp3xxx.mpy
adafruit-circuitpython-bundle-10.x-mpy-20260321/lib/adafruit_pn532/: adafruit_pn532.mpy  i2c.mpy  spi.mpy  uart.mpy
adafruit-circuitpython-bundle-10.x-mpy-20260321/lib/adafruit_qualia/: __init__.mpy  graphics.mpy  network.mpy  peripherals.mpy
adafruit-circuitpython-bundle-10.x-mpy-20260321/lib/adafruit_ra8875/: ra8875.mpy
adafruit-circuitpython-bundle-10.x-mpy-20260321/lib/adafruit_rfm/: rfm69.mpy  rfm9x.mpy  rfm9xfsk.mpy  rfm_common.mpy
adafruit-circuitpython-bundle-10.x-mpy-20260321/lib/adafruit_usb_host_mouse/: __init__.mpy
adafruit-circuitpython-bundle-10.x-mpy-20260321/lib/adafruit_wiznet5k/: adafruit_wiznet5k.mpy
adafruit-circuitpython-bundle-10.x-mpy-20260321/lib/adafruit_yoto/: __init__.mpy  cr95hf.mpy  es8156.mpy  graphics.mpy  network.mpy  peripherals.mpy  sgm41513.mpy  yoto.mpy
adafruit-circuitpython-bundle-10.x-mpy-20260321/requirements/adafruit_apds9999/: pyproject.toml  requirements.txt
adafruit-circuitpython-bundle-10.x-mpy-20260321/requirements/adafruit_as7331/: pyproject.toml  requirements.txt
adafruit-circuitpython-bundle-10.x-mpy-20260321/requirements/adafruit_as7343/: pyproject.toml
adafruit-circuitpython-bundle-10.x-mpy-20260321/requirements/adafruit_checkbox/: pyproject.toml
adafruit-circuitpython-bundle-10.x-mpy-20260321/requirements/adafruit_sgp41/: pyproject.toml  requirements.txt
adafruit-circuitpython-bundle-10.x-mpy-20260321/requirements/adafruit_ssd1677/: pyproject.toml
adafruit-circuitpython-bundle-10.x-mpy-20260321/requirements/adafruit_stcc4/: pyproject.toml
adafruit-circuitpython-bundle-10.x-mpy-20260321/requirements/adafruit_tcs3430/: pyproject.toml  requirements.txt
adafruit-circuitpython-bundle-10.x-mpy-20260321/requirements/adafruit_xteink_x4/: pyproject.toml  requirements.txt
adafruit-circuitpython-bundle-10.x-mpy-20260321/requirements/adafruit_yoto/: pyproject.toml  requirements.txt
cpb/: code.py  code_reveal.py
docs/: hardware.md  overview.md  phone-app.md  session-log.md  setup.md
phone-app/: App.tsx  app.json  package-lock.json  package.json
phone-app/.expo/: devices.json
phone-app/.expo/prebuild/: cached-packages.json
phone-app/ios/: Podfile
phone-app/patches/: expo-speech-recognition+3.1.2.patch
(+16 files in other folders)
